--- a/css/manual.css
+++ b/css/manual.css
@@ -6,7 +6,7 @@ main{
     height: auto;
     position: relative;
 }
-section{
+.section{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -54,7 +54,7 @@ iframe{
 }
 
 @media only screen and (max-width: 992px) {
-    section{
+    .section{
         flex-direction: column-reverse;
     }
     .contentMain, .contentDesc{
